2001-12-06  Jody Goldberg <jody@gnome.org>

	* src/sheet.c (sheet_colrow_set_collapse) : new.
	(sheet_colrow_insert_finish) : new.
	(sheet_colrow_delete_finish) : new.
	(sheet_{col,row}_{ins,del} : use them here, we shoulw now correctly
	  handle collapse states and gutters when ins/del cols/row.

2001-12-06  Jody Goldberg <jody@gnome.org>

	* src/sheet.c (sheet_colrow_gutter) : change signature and toggle the
	  resize flag if necessary.
	(sheet_update_only_grid) : handle the resize and
	  recompute_max_{col,row}_group flags.

	* src/colrow.c (colrow_set_states) : use simplified
	  sheet_colrow_gutter signature.

2001-12-06  Jody Goldberg <jody@gnome.org>

	* src/workbook-cmd-format.c (sheet_dialog_set_row_height) : const.

	* src/workbook-object-toolbar.c : disable some code that is not ready
	  for release.

	* src/sheet.c (sheet_colrow_insdel_finish) : new.
	(sheet_{col,row}_{ins,del} : use it here, and adjust the arguments to
	  include optional state to fill in the new cols/rows.
	(sheet_colrow_fit_gutter) : simplify.
	(sheet_colrow_group_ungroup) : ditto.
	(sheet_colrow_fetch) : new utility.
	(sheet_colrow_get_info) : ditto.

	* src/sheet-control-gui.c (scg_setup_group_buttons) : new.
	(scg_resize) : use it here.
	(sheet_control_gui_new) : handle the layout for the group buttons.

	* src/print.c (compute_group) : const.

	* src/item-grid.c (item_grid_draw) : remove pointless use of
	  ColRowInfo::pos because I want to remove that eventually.
	* src/print-cell.c (print_cell_range) : ditto.

	* src/item-bar.c (item_bar_normal_font) : new.
	(item_bar_indent) : new.
	(item_bar_draw) : draw the top line as black, to match other buttons,
	 fix its length.

	* src/history.c (history_menu_locate_separator) : sync with manu
	  changes.

	* src/gnumeric.h
	(ColRowStateGroup) : rename from ColRowSizeList.
	(ColRowStateList) : rename from ColRowRLESizeList.

	* src/gnumeric-canvas.c (gnm_canvas_find_col) : const.
