@@ -1,3 +1,8 @@
+2001-12-07  Jody Goldberg <jody@gnome.org>
+
+	* src/parse-util.c (parse_cell_name_or_range) : delete unused.
+	(parse_cell_name_list) : ditto.
+
 2001-12-06  Jody Goldberg <jody@gnome.org>
 
 	* src/sheet.c (sheet_colrow_set_collapse) : new.
